--- a/CPP1/little.in
+++ b/CPP1/little.in
@@ -1,1 +1,91 @@
-100045
+Miller Rabin Primality Test[3, 1]
+Number of divisors[3, 2]
+Sum of Divisors[3, 3]
+Sum of NOD from 1 to N in O(√N)[3, 4]
+Mod Inverse from 1 to N in O(N)[3, 5]
+Euler Phi Function[3, 6]
+Euler Phi for 1 to N[3, 7]
+Euler Phi for a segment[3, 8]
+Nbase to Mbase Conversion[3, 9]
+Primes between a Segment[4, 10]
+Prime Factorization of factorial[4, 11]
+Sparse Table (Min Query)[4, 12]
+Sparse Table (Sum Query)[4, 13]
+Extended Euclidean Algorithm[4, 14]
+Sum of SOD from 1 to N in O(√N)[4, 15]
+Diophantine Equation[4, 16]
+N-th Fibonacci Number in O(logN)[5, 17]
+2D Sparse Table (Min Query)[5, 18]
+Next Greater Element for all a[i][5, 19]
+Segment Tree(Minimum Query)[5, 20]
+Segment Tree(Maximum Query with Frequency)[5, 21]
+Lazy Propagation(Assignment)[6, 22]
+Lazy Propagation(Modification)[6, 23]
+Hashing[7, 24]
+Hashing with Update[7, 25]
+Trie Data Structure[8, 26]
+Trie Applications[8, 27]
+Distinct Element Range Query[9, 28]
+Combination Generation[9, 29]
+Bi Section Method[9, 30]
+Maximum/Minimum Subarray Sum with Index[9, 31]
+2D Prefix Sum[9, 32]
+Max/ Min Submatrix Sum[9, 33]
+Number of subarray divisible by K[10, 34]
+Number of D’s from 1 to N[10, 35]
+All Possible Subset Sum[10, 36]
+0-1 Knapsack[10, 37]
+Digit DP1: Count the number of integers within the range A to B whose digitSum equals to X[10, 38]
+LCS(with path)[10, 39]
+LIS(with Path)[11, 40]
+Longest Palindromic Subsequence(with path)[11, 41]
+Minimum Edit[11, 42]
+Target Element using minimum elements(using elements once)[11, 43]
+Target Element using minimum elements(using elements multiple times)[11, 44]
+Max Path Sum[11, 45]
+Target Element (Path)(once)[12, 46]
+Target Element (Path)(Multiple)[12, 47]
+Ways of Target Element(Once, Ordering)[12, 48]
+Ways of Target Element(Multiple, Ordering)[12, 49]
+Ways of Target Element(Multiple, Non-Ordering)[12, 50]
+Floyd Warshall[12, 51]
+Maximum Profit (Recurisive)[13, 52]
+Maximum Distance from Each Node[13, 53]
+Finding all Cycles in Undirected Graph in O(N + M)[13, 54]
+Shortest Cycle in Undirected Graph[13, 55]
+Size of each Subtree[13, 56]
+Finding Bridges in O(N + M)[14, 57]
+Topological Sort(Lexicographical)[14, 58]
+Topological Sort[14, 59]
+Topological Sort(all topo sorting)[14, 60]
+Diameter of Tree[14, 61]
+2D DFS Traversal[14, 62]
+Bipartiteness check[15, 63]
+Minimum Spanning Tree[15, 64]
+Dijkstra (single source shortest path)[15, 65]
+DSU(Disjoint Set Union)[15, 66]
+Lexicographical Minimal Rotation of a string[15, 67]
+Beautiful Subgrids[16, 68]
+Sliding Median[16, 69]
+Sliding Cost[16, 70]
+Count Coprime Pairs[16, 71]
+Catalan Numbers[16, 72]
+Sort Co-ordinates in Clockwise order[17, 73]
+Mobius Function[17, 74]
+KMP Algorithm[17, 75]
+LCA(Lowest Common Ancestor)[17, 76]
+LCA in O(1)[18, 77]
+Shortest Path(for Negative Cycles)[18, 78]
+SCC(strongly connected components)[19, 79]
+CRT(1)[20, 80]
+Burnside’s Lemma[20, 81]
+ModInverse by Non Prime[20, 82]
+I-th line of pascal triangle[20, 83]
+Matrix 90 degree Rotation(Clockwise)[20, 84]
+Matrix 90 degree Rotation(Anti Clockwise)[20, 85]
+Tower of Hanoi[20, 86]
+Activity Selection[20, 87]
+Decimal to Balanced Ternary[20, 88]
+Longest Palindrome Prefix[21, 89]
+Shortest Period of a string[21, 90]
+Merge Sort[21, 91]
