--- a/CPP1/.vscode/tasks.json
+++ b/CPP1/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "build and run",
       "type": "shell",
-      "command": "g++.exe -std=c++17 \"${file}\" -o \"${fileBasenameNoExtension}.exe\" && \"./${fileBasenameNoExtension}.exe\"<_input.txt>_output.txt",
+      "command": "g++ -std=c++20 \"${file}\" -o \"${fileBasenameNoExtension}\" && ./${fileBasenameNoExtension} < _input.txt > _output.txt",
       "group": {
         "kind": "build",
         "isDefault": true
