--- a/VS Code JSONs/tasks.json
+++ b/VS Code JSONs/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "build and run",
       "type": "shell",
-      "command": "g++.exe -std=c++2a \"${file}\" -o \"${fileBasenameNoExtension}.exe\" && \"./${fileBasenameNoExtension}.exe\" < inputf.txt > outputf.txt",
+      "command": "g++ -std=c++20 \"${file}\" -o \"${fileBasenameNoExtension}\" && ./${fileBasenameNoExtension} < _input.txt > _output.txt",
       "group": {
         "kind": "build",
         "isDefault": true
